syntax = "proto3";
package orders;
option go_package = "github.com/fjod/go_cart/orders-service/pkg/proto";

service OrdersService {
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

message OrderItem {
    int64 product_id = 1;
    string product_name = 2;
    int32 quantity = 3;
    double price = 4;
}

message Order {
    string id = 1;
    string checkout_id = 2;
    string user_id = 3;
    double total_amount = 4;
    string currency = 5;
    string status = 6;
    repeated OrderItem items = 7;
    string created_at = 8;
}

message GetOrderRequest {
    string order_id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message ListOrdersRequest {
    string user_id = 1;
}

message ListOrdersResponse {
    repeated Order orders = 1;
}